# rEFInd_GUI

./: .Xresources  .gitattributes  .gitignore  CLAUDE.md  I18N_AUDIT.md  PKGBUILD  README.md  install-rEFInd-GUI.sh  install_config_from_GUI  install_config_from_GUI.sh  rEFInd_GUI.desktop  rEFInd_GUI.spec  rEFInd_bg_randomizer.service  rEFInd_bg_randomizer.sh  refind-GUI.conf  refind_install_Sourceforge.sh  refind_install_package_mgr.sh  scan_esp.sh  uninstall_rEFInd.sh  zz_install_config_from_GUI
.github/workflows/: arch-release.yml  deb-release.yml  rpm-release.yml  windows-release.yml
GUI/: rEFInd_GUI.ini
GUI/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  osdetect.h  osdetect_common.cpp  osdetect_linux.cpp  osdetect_win.cpp  platform.cpp  platform.h  rEFInd_GUI.manifest  rEFInd_GUI.rc  rEFInd_GUI_ar.ts  rEFInd_GUI_bn.ts  rEFInd_GUI_de.ts  rEFInd_GUI_en_US.ts  rEFInd_GUI_es.ts  rEFInd_GUI_fa.ts  rEFInd_GUI_fr.ts  rEFInd_GUI_hi.ts  rEFInd_GUI_id.ts  rEFInd_GUI_it.ts  rEFInd_GUI_ja.ts  rEFInd_GUI_ko.ts  rEFInd_GUI_nl.ts  rEFInd_GUI_pt.ts  rEFInd_GUI_ru.ts  rEFInd_GUI_scn.ts  rEFInd_GUI_tr.ts  rEFInd_GUI_uk.ts  rEFInd_GUI_ur.ts  rEFInd_GUI_vi.ts  rEFInd_GUI_zh_CN.ts  resources.qrc
debian/: changelog  control  rules
windows/: SIGNING.md  assemble-deploy.sh  install-rEFInd-GUI.ps1  install_config_from_GUI.ps1  install_rEFInd.ps1  rEFInd_GUI.iss  rEFInd_bg_randomizer.ps1  rEFInd_bg_randomizer_task.ps1  uefi_refind.ps1  uninstall_rEFInd.ps1
